--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="https://t.me/Yatsuu_bot">Bot</a></li>
             <li><a href="#">Courses</a></li>
-            <li><a href="https://www.instagram.com/yatxu1_/">Instagram</a></li>
+            <li><a href="contact.html">Contact</a></li>
          </ul> 
          <div>
             <a href="login.html.html" class="login-btn">Log in</a>
